apps/base/eurooffice/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eurooffice
  namespace: eurooffice
spec:
  selector:
    app.kubernetes.io/name: eurooffice
  ports:
    - name: http
      port: 80
      targetPort: 80
